@@ -1,3 +1,8 @@
+2012-04-08 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFTimeZone.c: Start implementing CFTimeZone.
+	* Tests/CFTimeZone/create.c: Added very basic tests.
+
 2012-02-18 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFURL.c: Fixes to CFURLStringParse() and
